<resources>
    <string name="app_name">IMC_Calculator</string>
    <string name="calcular">Calcular</string>
    <string name="altura_m">Altura (m)</string>
    <string name="peso_kg">Peso (Kg)</string>
    <string name="indice_de_masa_corporal">Indice de Masa Corporal</string>
    <string name="ingrese_los_siguinetes_datos">Ingrese los siguinetes datos:</string>
    <string name="regresar">Regresar</string>
    <string name="text">text</string>
    <string name="si">Si</string>
    <string name="test">Test</string>
</resources>